--- a/BCA_TELECOMUNICACIONES/src/bca_telecomunicaciones/insertarTicket.form
+++ b/BCA_TELECOMUNICACIONES/src/bca_telecomunicaciones/insertarTicket.form
@@ -147,7 +147,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Fecha de entrada:"/>
+            <Property name="text" type="java.lang.String" value="Fecha inicial:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField2">
